[gd_scene load_steps=2 format=2]

[ext_resource path="res://Interfaces/PauseMenu.gd" type="Script" id=1]

[node name="PauseMenu" type="Control"]
pause_mode = 2
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0901961, 0.0901961, 0.0901961, 0.690196 )

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 263.0
margin_top = 103.0
margin_right = 377.0
margin_bottom = 256.0
custom_constants/separation = 15

[node name="Resume" type="Button" parent="CenterContainer/VBoxContainer"]
margin_right = 114.0
margin_bottom = 27.0
text = "Resume"

[node name="Restart" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 42.0
margin_right = 114.0
margin_bottom = 69.0
text = "Restart"

[node name="Main Menu" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 84.0
margin_right = 114.0
margin_bottom = 111.0
text = "Main Menu"

[node name="Quit Game" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 126.0
margin_right = 114.0
margin_bottom = 153.0
text = "Quit game"

[connection signal="pressed" from="CenterContainer/VBoxContainer/Resume" to="." method="_on_Resume_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Restart" to="." method="_on_Restart_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Main Menu" to="." method="_on_Main_Menu_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Quit Game" to="." method="_on_Quit_Game_pressed"]
